fixed wrapped lines and improved layout

--- a/client/css/jsonedit.css
+++ b/client/css/jsonedit.css
@@ -578,16 +578,19 @@ body.jsonEdit #toolbar {
 
 .jeLineNumber {
   display: inline-block;
-  width: 40px;
+  width: 38px;
   text-align: right;
-  padding-right: 10px;
+  padding-right: 2px;
   color: #444;
+  margin-left: -10px;
+  vertical-align: top;
 }
 
 .jeLineContent {
   display: inline-block;
+  width: calc(100% - 30px);
 }
 
 #jeText {
-  padding-left: 50px;
+  padding-left: 30px;
 }
